test-resources/invalid-project/src/main/java/test/group/id/RTL.java
package test.group.id;

/**
 * ‫
 * Bidi characters above
 */
public class RTL
{
    public static void main( String[] args )
    {
        System.out.println( "Hello World!" );
    }
}
